syntax = "proto3";
package pb;

message Address {
    string address = 1;
}

message Balance {
    int64 balance = 1;
}

message AddressBalance {
    string address = 1;
    int64 balance = 2;
}

message Success {
}

message Error {
    string msg = 1;
}

message TransferBalance {
    string from = 1;
    string to = 2;
    int64 balance =3;
}

message Result {
    oneof result {
        Address addr = 1;
        Balance bal = 2;
        Success s = 3;
    }
}
message Empty {}
service Jobcoin {
    rpc GetBalance(Address) returns (Result) {}
    rpc GetNewAddress(Empty) returns (Result){}
    rpc FundAddress(AddressBalance) returns (Result) {}
    rpc Transfer(TransferBalance) returns (Result)  {}
}


enum Tx {
    GET_BAL = 0;
    GET_NEW_ADDR = 1;
    FUND_ADDR = 2;
    TRANSFER = 3;
}

message Command {
    Tx Txn=1;
    oneof arg{
        Address get = 2;
        AddressBalance fund = 3;
        TransferBalance transfer = 4;
    }
}

message QueryDepositAddress {
    repeated Address addrs= 1;
    int64 value = 2;
}

message DepositAddress {
    Address deposit_addr = 1;
}

service Mixer{
    rpc Mix(QueryDepositAddress) returns (DepositAddress) {}
}